# floating-lyrics

./: .gitignore  Cargo.toml  README.md  build.bat  tauri.cmd  tauri.conf.json  tauri.serverless.conf.json  tauri.standalone.conf.json  tauri.withserver.conf.json  tauri.ytm.conf.json
capabilities/: default.json
html/: index.html
icons/: README.md
scripts/: close-window-control.js  layout-hover-bounds.js  restore-translation-excluded-languages.js  set-translation-allowed-and-sync.js  swap-lyrics-candidate.js  sync-translation-excluded-languages.js  toggle-blur-effects.js  toggle-expensive-effects.js  toggle-translation-exclude-and-sync.js  transparent-bg.js  welcome-window-control.js  window-mode-chrome.js
src/: app_runtime.rs  main.rs  serverless.rs  withserver.rs
src/modules/: click_through.rs  commands.rs  lock.rs  menu.rs  mod.rs  mode.rs  network.rs  scripts.rs  settings.rs  update.rs  window.rs
windows/: hooks.nsi
