[package]
name = "floating-lyrics"
version = "1.1.0"
description = "Floating Lyrics Display"
authors = ["necra"]
edition = "2021"

[[bin]]
name = "floating-lyrics"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-opener = "2.5.3"
tauri-plugin-dialog = "2.0"
tauri-plugin-global-shortcut = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
raw-window-handle = "0.6"
lazy_static = "1.4"
tiny_http = { version = "0.12", optional = true }
tauri-plugin-deep-link = { version = "2" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_Graphics_Dwm", "Win32_UI_HiDpi", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_JobObjects", "Win32_Security", "Win32_System_Threading"] }
[features]
default = []
serverless = ["dep:tiny_http"]
withserver = []
standalone = []
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
